# matrix-3d-snake-game

./: .gitignore  CMakeLists.txt  Main.qml  README.md  build.sh  install.sh  main.cpp  run.sh  test.sh
LedMatrixCube/: ControlPanel.qml  LedMatrixCube.cpp  LedMatrixCube.hpp  LedMatrixCube.qml  LedMatrixCubeWindow.qml  UserInputController.cpp  UserInputController.hpp
LedMatrixCube/qml/: ControlPanel.qml  LedMatrixCube.qml  LedMatrixCubeWindow.qml
Matrix3DSnakeGame/: Matrix3DSnakeGame.c  Matrix3DSnakeGame.h
include/matrix_3d_snake_game/: game.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h  glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/matrix_3d_snake_game/: game.c
test/: matrix_3d_snake_game_test.cc
